force-app/main/default/objects/EventStoreItem__c/EventStoreItem__c.object-meta.xml
<CustomObject>
    <label>Event Store Item</label>
    <nameField>
        <displayFormat>EVI-{000000000}</displayFormat>
        <label>Event store item name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Store Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>