force-app/main/default/objects/EventStoreItem__c/fields/FirstReplayID__c.field-meta.xml
<CustomField>
    <fullName>FirstReplayID__c</fullName>
    <label>First replay ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>