force-app/main/default/objects/EventStoreItem__c/fields/IsCDC__c.field-meta.xml
<CustomField>
    <fullName>IsCDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CDC</label>
    <type>Checkbox</type>
</CustomField>