force-app/main/default/objects/EventStoreItem__c/fields/LastReplayID__c.field-meta.xml
<CustomField>
    <fullName>LastReplayID__c</fullName>
    <label>Last replay ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>