force-app/main/default/objects/EventStoreItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>HandlerClassName__c</columns>
    <columns>FirstReplayID__c</columns>
    <columns>LastReplayID__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>